Changed games resource to match users.
Added dummy games to store.
Added a GameSchema.
Updated OpenAPI spec and added a /games/{id} endpoint.
Updated games resource to match the way the users resource works.
