# racecard/server/rest/openapi/openapi.yaml
@@ -33,6 +33,42 @@ paths:
             "application/vnd.api+json":
               schema:
                 $ref: "#/components/schemas/gameMany"
+  /games/{id}:
+    get:
+      operationId: games.get
+      summary: Details about the game with the given id.
+      tags: [games]
+      parameters:
+        - name: id
+          in: path
+          description: The id of the desired game, in UUID format.
+          required: True
+          schema:
+            $ref: "#/components/schemas/id"
+      responses:
+        "200":
+          description:
+            Returns details about the game and a link to the game's owner.
+            Result is in JSON:API format.
+          content:
+            "application/vnd.api+json":
+              schema:
+                $ref: "#/components/schemas/gameSingle"
+        "404":
+          description: User with the given id was not found.
+          content:
+            "application/vnd.api+json":
+              schema:
+                $ref: "#/components/schemas/failure"
+        "400":
+          description:
+            Application framework error response, probably due to input/output not
+            validating against this OpenAPI specification.
+            Result is in Problem Detail [RFC7807] format.
+          content:
+            "application/problem+json":
+              schema:
+                $ref: "#/components/schemas/problemDetail"
   /users:
     get:
       operationId: users.search
@@ -92,6 +128,8 @@ components:
       $ref: "common.yaml#/components/schemas/failure"
     problemDetail:
       $ref: "common.yaml#/components/schemas/problemDetail"
+    gameSingle:
+      $ref: "game.yaml#/components/schemas/gameSingle" # Included by prance
     gameMany:
       $ref: "game.yaml#/components/schemas/gameMany" # Included by prance
     userSingle:
